--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,19 @@ body {
 }
 
 
-
 /*** burger menu ***/
 
 a#menu svg {
 	width: 40px;
 	fill: #000;
 }
+
+a#menu-close svg {
+	width: 40px;
+	fill: #000;
+}
+
+
 
 nav, main {
 	box-sizing: border-box;
@@ -53,9 +59,8 @@ main {
 
 nav {
 	padding: 1em;
-	width: 35%;
+	width: 45%;
 	height: 100%;
-	min-width: 300px;
 	position: absolute;
 	/* This trasform moves the drawer off canvas. */
 	-webkit-transform: translate(-300px, 0);
@@ -65,16 +70,26 @@ nav {
 	z-index: 99;
 }
 
+/* nav:first-child {
+	padding: 0em;
+} */
+
 nav.open {
 	-webkit-transform: translate(0, 0);
 	transform: translate(0, 0);
 }
 
+.close-x {
+  stroke: black;
+  fill: transparent;
+  stroke-linecap: round;
+  stroke-width: 5;
+}
 
 /* If there is (> 600px) the menu is always open. */
 @media screen and (min-width: 600px) {
 	/* Remove the menu. */
-	#menu {
+	#menu, #menu-close {
 		display: none;
 	}
 
@@ -83,14 +98,18 @@ nav.open {
 		position:relative;
 		-webkit-transform: translate(0, 0);
 		transform: translate(0, 0);
+		width: 35%;
+		height: 100%;
+		min-width: 150px;
+
 	}
 
 	/* Flexbox on the parent. */
 	body {
 		display: -webkit-flex;
 		display: flex;
-		-webkit-flex-flow: row nowrap;
-		flex-flow: row nowrap;
+		/* -webkit-flex-flow: row nowrap;
+		flex-flow: row nowrap; */
 	}
 
 	main {
@@ -100,21 +119,19 @@ nav.open {
 	}
 }
 
-
-/* Old CSS that might need changing */
-
-
-
 /* form design */
-input {
-	width: 80%;
-	box-sizing: border-box;
-	padding: 12px 20px;
-
+.form-container {
+	display: -webkit-flex;
+    display: flex;
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	width: 100%
+	justify-content: center;
 }
 
+
 input[type=text] {
-    width: 130px;
+	width: 100%;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
@@ -124,10 +141,32 @@ input[type=text] {
     background-position: 10px 10px;
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
+    /*-webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out; */
 }
 
-input[type=text]:focus {
-    width: 60%;
+label {
+	flex-basis: 100%;
+	padding-bottom: 1.2em;
+
+
+}
+
+#form-container {
+	padding-bottom: 2em;
+}
+
+#location {
+	flex-basis: 100%;
+	justify-content: center;
+}
+
+
+#search-btn {
+	flex-basis: 100%;
+	justify-content: center;
+}
+
+#search-btn {
+
 }
